tests/ui/parser/issue-103869.stderr
error: expected one of `(`, `,`, `=`, `{`, or `}`, found `:`
  --> $DIR/issue-103869.rs:2:8
   |
LL |     vec: Vec<usize>,
   |        ^ expected one of `(`, `,`, `=`, `{`, or `}`
   |
   = help: enum variants can be `Variant`, `Variant = <integer>`, `Variant(Type, ..., TypeN)` or `Variant { fields: Types }`

error: expected item, found `:`
  --> $DIR/issue-103869.rs:2:8
   |
LL |     vec: Vec<usize>,
   |        ^ expected item

error: aborting due to 2 previous errors

